--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="styles/rock-paper-scissors.css">
+    <link rel="stylesheet" href="rock-paper-scissors.css">
 
   </head>
   <body>
